--- a/web/src/search/input/SearchPage.scss
+++ b/web/src/search/input/SearchPage.scss
@@ -15,6 +15,21 @@
     overflow: auto;
     padding-bottom: 4rem;
 
+    &__web-link {
+        color: #1C7CD6;
+    }
+
+    h5 {
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    p {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 20px;
+    }
+
     &__logo {
         flex: 0 0 auto;
         display: flex;
@@ -82,25 +97,18 @@
         display: grid;
         grid-template-columns: 2fr 1fr 2fr;
         column-gap: 2rem;
+        color: #475C85;
 
-        &-header {
-            color: $gray-14;
-        }
 
         &-subheading {
-            color: $gray-07;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
         }
-    }
-
-    &__web-link {
-        color: #1c7cd6;
     }
 
     &__keyword-value-text {
-        color: '#6078A9';
-        font-size: '12px';
-        line-height: '140%';
+        color: #6078A9;
+        font-size: 12px;
+        line-height: 140%;
     }
 
     &__repogroup-listing-title {
@@ -121,6 +129,46 @@
     .search-page {
         &__sign-in {
             color: $color-light-text-4;
+        }
+
+        h1, h2 {
+            color: #2B3750;
+        }
+
+        h3, h4, h6 {
+            color: #566E9F;
+        }
+
+        h5 {
+            color: #32405D;
+        }
+
+        &__web-link {
+            color: #1C7CD6;
+        }
+    }
+}
+
+.theme-dark {
+    .search-page {
+        h1, h2 {
+            color: #889ABF;
+        }
+
+        h3, h4, h6 {
+            color: #95A5C6;
+        }
+
+        h5 {
+            color: #D7DDEA;
+        }
+
+        p, i {
+            color: #AFBCD4;
+        }
+
+        &__web-link {
+            color: #329AF0;
         }
     }
 }
